full-moon/tests/cases/fail/parser/stmt-after-break-1/source.lua
print("1")
break -- this can be replaced with break/return
print("2")
